{
  "version": 4,
  "terraform_version": "1.3.4",
  "serial": 13,
  "lineage": "474c13fa-ced1-4cf5-6397-7152f96fba09",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-11-22T12:06:28.413-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/suswa-bigquery/global/firewalls/fw-allow-bastion",
            "log_config": [],
            "name": "fw-allow-bastion",
            "network": "https://www.googleapis.com/compute/v1/projects/suswa-bigquery/global/networks/vpc-tf",
            "priority": 1000,
            "project": "suswa-bigquery",
            "self_link": "https://www.googleapis.com/compute/v1/projects/suswa-bigquery/global/firewalls/fw-allow-bastion",
            "source_ranges": [],
            "source_service_accounts": [],
            "source_tags": [
              "web"
            ],
            "target_service_accounts": [],
            "target_tags": [
              "http",
              "ssh"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-11-22T12:06:28.237-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/suswa-bigquery/global/firewalls/fw-allow-http",
            "log_config": [],
            "name": "fw-allow-http",
            "network": "https://www.googleapis.com/compute/v1/projects/suswa-bigquery/global/networks/vpc-tf",
            "priority": 1000,
            "project": "suswa-bigquery",
            "self_link": "https://www.googleapis.com/compute/v1/projects/suswa-bigquery/global/firewalls/fw-allow-http",
            "source_ranges": [],
            "source_service_accounts": [],
            "source_tags": [
              "web"
            ],
            "target_service_accounts": [],
            "target_tags": [
              "http"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "udp"
              },
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2022-11-22T12:06:28.209-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/suswa-bigquery/global/firewalls/allow-internal",
            "log_config": [],
            "name": "allow-internal",
            "network": "https://www.googleapis.com/compute/v1/projects/suswa-bigquery/global/networks/vpc-tf",
            "priority": 1000,
            "project": "suswa-bigquery",
            "self_link": "https://www.googleapis.com/compute/v1/projects/suswa-bigquery/global/firewalls/allow-internal",
            "source_ranges": [
              "10.26.1.0/24",
              "10.26.2.0/24",
              "10.26.3.0/24",
              "10.26.4.0/24"
            ],
            "source_service_accounts": [],
            "source_tags": [
              "web"
            ],
            "target_service_accounts": [],
            "target_tags": [
              "http"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vm1-tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/centos-cloud/global/images/centos-7-v20180129",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/suswa-bigquery/zones/us-central1-c/disks/vm1-tf"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Unknown CPU Platform",
            "current_status": "TERMINATED",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/suswa-bigquery/zones/us-central1-c/instances/vm1-tf",
            "instance_id": "5574162010524914992",
            "label_fingerprint": "bGQQ8F_o3-k=",
            "labels": {
              "webserver": "true"
            },
            "machine_type": "n1-standard-1",
            "metadata": {
              "startup-script": "        apt-get -y update\r\n        apt-get -y install nginx\r\n        export HOSTNAME=$(hostname | tr -d '\\n')\r\n        export PRIVATE_IP=$(curl -sf -H 'Metadata-Flavor:Google' http://metadata/computeMetadata/v1/instance/network-interfaces/0/ip | tr -d '\\n')\r\n        echo \"Welcome to $HOSTNAME - $PRIVATE_IP\" \u003e /usr/share/nginx/www/index.html\r\n        service nginx start\r\n"
            },
            "metadata_fingerprint": "ZjOoqf9mbvY=",
            "name": "vm1-tf",
            "network_interface": [
              {
                "access_config": [
                  {
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/suswa-bigquery/global/networks/vpc-tf",
                "network_ip": "10.26.2.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/suswa-bigquery/regions/us-central1/subnetworks/uc1-public-subnet",
                "subnetwork_project": "suswa-bigquery"
              }
            ],
            "project": "suswa-bigquery",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/suswa-bigquery/zones/us-central1-c/instances/vm1-tf",
            "tags": [
              "http",
              "ssh"
            ],
            "tags_fingerprint": "7XLBdwIeS7E=",
            "zone": "us-central1-c"
          },
          "dependencies": [
            "google_compute_network.vpc-tf",
            "google_compute_subnetwork.uc1-public-subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vm2-tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/centos-cloud/global/images/centos-7-v20180129",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/suswa-bigquery/zones/us-east1-c/disks/vm2-tf"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Unknown CPU Platform",
            "current_status": "TERMINATED",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/suswa-bigquery/zones/us-east1-c/instances/vm2-tf",
            "instance_id": "8833344951788016911",
            "label_fingerprint": "bGQQ8F_o3-k=",
            "labels": {
              "webserver": "true"
            },
            "machine_type": "n1-standard-1",
            "metadata": {
              "startup-script": "        apt-get -y update\r\n        apt-get -y install nginx\r\n        export HOSTNAME=$(hostname | tr -d '\\n')\r\n        export PRIVATE_IP=$(curl -sf -H 'Metadata-Flavor:Google' http://metadata/computeMetadata/v1/instance/network-interfaces/0/ip | tr -d '\\n')\r\n        echo \"Welcome to $HOSTNAME - $PRIVATE_IP\" \u003e /usr/share/nginx/www/index.html\r\n        service nginx start\r\n"
            },
            "metadata_fingerprint": "ZjOoqf9mbvY=",
            "name": "vm2-tf",
            "network_interface": [
              {
                "access_config": [
                  {
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/suswa-bigquery/global/networks/vpc-tf",
                "network_ip": "10.26.4.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/suswa-bigquery/regions/us-east1/subnetworks/ue1-public-subnet",
                "subnetwork_project": "suswa-bigquery"
              }
            ],
            "project": "suswa-bigquery",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/suswa-bigquery/zones/us-east1-c/instances/vm2-tf",
            "tags": [
              "http",
              "ssh"
            ],
            "tags_fingerprint": "7XLBdwIeS7E=",
            "zone": "us-east1-c"
          },
          "dependencies": [
            "google_compute_network.vpc-tf",
            "google_compute_subnetwork.ue1-public-subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc-tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/suswa-bigquery/global/networks/vpc-tf",
            "mtu": 0,
            "name": "vpc-tf",
            "project": "suswa-bigquery",
            "routing_mode": "GLOBAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/suswa-bigquery/global/networks/vpc-tf"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "uc1-private-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-11-22T12:06:28.286-08:00",
            "gateway_address": "10.26.1.1",
            "id": "projects/suswa-bigquery/regions/us-central1/subnetworks/uc1-private-subnet",
            "ip_cidr_range": "10.26.1.0/24",
            "name": "uc1-private-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/suswa-bigquery/global/networks/vpc-tf",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "suswa-bigquery",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/suswa-bigquery/regions/us-central1/subnetworks/uc1-private-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "uc1-public-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-11-22T12:06:28.401-08:00",
            "gateway_address": "10.26.2.1",
            "id": "projects/suswa-bigquery/regions/us-central1/subnetworks/uc1-public-subnet",
            "ip_cidr_range": "10.26.2.0/24",
            "name": "uc1-public-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/suswa-bigquery/global/networks/vpc-tf",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "suswa-bigquery",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/suswa-bigquery/regions/us-central1/subnetworks/uc1-public-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "ue1-private-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-11-22T12:06:28.512-08:00",
            "gateway_address": "10.26.3.1",
            "id": "projects/suswa-bigquery/regions/us-east1/subnetworks/ue1-private-subnet",
            "ip_cidr_range": "10.26.3.0/24",
            "name": "ue1-private-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/suswa-bigquery/global/networks/vpc-tf",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "suswa-bigquery",
            "purpose": "PRIVATE",
            "region": "us-east1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/suswa-bigquery/regions/us-east1/subnetworks/ue1-private-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "ue1-public-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-11-22T12:06:28.813-08:00",
            "gateway_address": "10.26.4.1",
            "id": "projects/suswa-bigquery/regions/us-east1/subnetworks/ue1-public-subnet",
            "ip_cidr_range": "10.26.4.0/24",
            "name": "ue1-public-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/suswa-bigquery/global/networks/vpc-tf",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "suswa-bigquery",
            "purpose": "PRIVATE",
            "region": "us-east1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/suswa-bigquery/regions/us-east1/subnetworks/ue1-public-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc-tf"
          ]
        }
      ]
    }
  ]
}